test/corpus/expressions.txt
==================
Bare function call
==================

lower

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)))))

==================
Empty parenthesized function call
:cst
==================

lower()

---

1:0 - 2:0   source_file
1:0 - 1:7     root_expression
1:0 - 1:7       open_expression
1:0 - 1:7         function_call
1:0 - 1:5           name: function_name `lower`
1:5 - 1:6           "("
1:6 - 1:7           ")"

==================
Mixed-case hyphenated function name
==================

foo-BAr-foo

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)))))

==================
Function call with positional arguments
==================

example(10, 20)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (numeric_literal))
          (positional_argument
            (numeric_literal)))))))

==================
Open expression pipeline
==================

remove-chars("a") | upper | trim()

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (double_quoted_literal
              (double_quoted_content)))))
      (function_call
        name: (function_name))
      (function_call
        name: (function_name)))))

==================
Numeric literals and pipeline
==================

-3.14 | round(2)

---

(source_file
  (root_expression
    (closed_expression
      (numeric_literal)
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (numeric_literal)))))))

==================
Boolean literals
==================

#true | some-function(#false)

---

(source_file
  (root_expression
    (closed_expression
      (boolean_literal)
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (boolean_literal)))))))

==================
Bare boolean words are function calls
==================

true | false()

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name))
      (function_call
        name: (function_name)))))

==================
Double-quoted text with escape
==================

"Alice said \"hello\"."

---

(source_file
  (root_expression
    (closed_expression
      (double_quoted_literal
        (double_quoted_content)
        (escape_sequence)
        (double_quoted_content)
        (escape_sequence)
        (double_quoted_content)))))

==================
Empty double-quoted text
==================

""

---

(source_file
  (root_expression
    (closed_expression
      (double_quoted_literal))))

==================
Backtick text preserves punctuation and whitespace
:cst
==================

` foo, (bar) `

---

1:0  - 2:0    source_file
1:0  - 1:14     root_expression
1:0  - 1:14       closed_expression
1:0  - 1:14         backtick_quoted_literal
1:0  - 1:1            "\`"
1:1  - 1:13           backtick_quoted_content ` foo, (bar) `
1:13 - 1:14           "\`"

==================
Date literal
==================

#"2025-12-17"

---

(source_file
  (root_expression
    (closed_expression
      (date_literal))))

==================
Datetime literal with T separator
==================

#"2025-12-17T14:30:00"

---

(source_file
  (root_expression
    (closed_expression
      (date_time_literal))))

==================
Datetime literal with space separator
==================

#"2025-12-17 14:30:00"

---

(source_file
  (root_expression
    (closed_expression
      (date_time_literal))))

==================
Time literal
==================

#"14:30:00"

---

(source_file
  (root_expression
    (closed_expression
      (time_literal))))

==================
Temporal-looking quoted text remains text
==================

"2025-12-17"

---

(source_file
  (root_expression
    (closed_expression
      (double_quoted_literal
        (double_quoted_content)))))

==================
Whitespace is insignificant outside literals
==================

  add( 5 , 10 ) | multiply( 2 )

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (numeric_literal))
          (positional_argument
            (numeric_literal))))
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (numeric_literal)))))))

==================
Backtick literal as a positional argument
==================

remove-chars(`a`)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (backtick_quoted_literal
              (backtick_quoted_content))))))))

==================
Temporal and backtick literals as positional arguments
==================

foo(#"2025-12-17", #"2025-12-17T14:30:00", #"14:30:00", `bar`)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (date_literal))
          (positional_argument
            (date_time_literal))
          (positional_argument
            (time_literal))
          (positional_argument
            (backtick_quoted_literal
              (backtick_quoted_content))))))))

==================
Incoming value
==================

...

---

(source_file
  (root_expression
    (closed_expression
      (incoming_value))))

==================
Incoming value in a record field
==================

{ original := ... }

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          name: (record_field_name
            (unquoted_record_field_name))
          value: (incoming_value))))))

==================
Record spread between fields
==================

{ before := .name, ..., after := #true }

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          name: (record_field_name
            (unquoted_record_field_name))
          value: (record_access
            field: (record_field_selector
              (named_record_field))))
        (record_spread)
        (record_field
          name: (record_field_name
            (unquoted_record_field_name))
          value: (boolean_literal))))))

==================
Singleton record spread
==================

{...}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_spread)))))

==================
Incoming value in an array
==================

{..., #true}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (incoming_value)
        (boolean_literal)))))

==================
Broadcast accepts a function argument
==================

broadcast(sum)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)))))))))

==================
Scan accepts a function argument
==================

scan(sum)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)))))))))

==================
Fold accepts a function argument
==================

fold(sum)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)))))))))

==================
Map accepts an open-expression argument
==================

map(lower | trim)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name))
              (function_call
                (function_name)))))))))

==================
Map accepts a function pipeline with arguments
==================

map(replace("a") | trim)

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)
                (argument_list
                  (positional_argument
                    (double_quoted_literal
                      (double_quoted_content)))))
              (function_call
                (function_name)))))))))

==================
Filter accepts a function-call argument
==================

filter(greater-than(2))

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)
                (argument_list
                  (positional_argument
                    (numeric_literal)))))))))))

==================
Array pipeline filters with a function argument
==================

{1,2,3,4,5} | filter(even)

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (numeric_literal)
        (numeric_literal)
        (numeric_literal)
        (numeric_literal)
        (numeric_literal))
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)))))))))

==================
Array pipeline maps with a function-call argument
==================

{1,2,3} | map(add(10))

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (numeric_literal)
        (numeric_literal)
        (numeric_literal))
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (open_expression
              (function_call
                (function_name)
                (argument_list
                  (positional_argument
                    (numeric_literal)))))))))))
