test/corpus/grouping-map-shorthand.txt
==================
Leading grouping-map shorthand
==================

|#> summarize

---

(source_file
  (root_expression
    (open_expression
      (grouping_map_shorthand
        expression: (open_expression
          (function_call
            name: (function_name)))))))

==================
Grouping-map shorthand preserves outer pipeline
==================

group |> .items |#> sum | reverse

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name))
      (map_shorthand
        expression: (open_expression
          (record_access
            field: (record_field_selector
              (named_record_field)))))
      (grouping_map_shorthand
        expression: (open_expression
          (function_call
            name: (function_name))))
      (function_call
        name: (function_name)))))

==================
Grouping-map shorthand in closed nested expression
==================

apply({1, 2} |#> (sum | add(1)))

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (closed_expression
              (array_literal
                (array_element
                  expression: (numeric_literal))
                (array_element
                  expression: (numeric_literal)))
              (grouping_map_shorthand
                expression: (open_expression
                  (parenthesized_expression
                    expression: (root_expression
                      (open_expression
                        (function_call
                          name: (function_name))
                        (function_call
                          name: (function_name)
                          (argument_list
                            (positional_argument
                              (numeric_literal))))))))))))))))
